--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <div class="col-sm-12">
                     
                 <a href="https://jkimberlyc.github.io/5ggameplay/" target="_blank"><img src="./images/5G-pic.png"/></a>
-                <a href="#" target="_blank"><img src="./images/sapero-pic.jpg"/></a>
+                <a href="http://sapero.vercel.app/" target="_blank"><img src="./images/sapero-pic.jpg"/></a>
                 <a href="https://antonettee.github.io/index.html/" target="_blank"><img src="./images/checkout-form.png"/></a>
                 </div>
 
