--- a/index.html
+++ b/index.html
@@ -134,14 +134,14 @@
                     <a href="https://jkimberlyc.github.io/5ggameplay/" target="_blank"><img
                             src="./images/5G-pic.png" /></a>
                     <a href="http://sapero.vercel.app/" target="_blank"><img src="./images/sapero-pic.jpg" /></a>
-                    <a href="https://antonettee.github.io/index.html/" target="_blank"><img
-                            src="./images/checkout-form.png" /></a>
+                    <a href="https://jar-kalinga.herokuapp.com/#home" target="_blank"><img
+                            src="./images/kalinga-pic.png" /></a>
                 </div>
 
                 <div class="col-sm-12">
 
-                    <a href="https://antonettee.github.io/Online-Library/" target="_blank"><img
-                            src="./images/library-pic.png" /></a>
+                    <a href="https://antonettee.github.io/Medical-Certificate/" target="_blank"><img
+                            src="./images/med-cert.png" /></a>
                     <a href="https://antonettee.github.io/Exercise-9/" target="_blank"><img src="./images/rps-pic.png"
                             class="img-thumbnail" /></a>
                     <a href="https://antonettee.github.io/Testimonials/" target="_blank"><img
@@ -153,7 +153,7 @@
 
         <!--Skills Section-->
         <section id="skill">
-            <h4>Skill</h4>
+            <h4>Skills</h4>
 
             <div class="mb-3">
                 <h2>HTML</h2>
