--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 skills.<br><br> I
                 graduated from St. Scholastica's college Tacloban and finished my degree with a Bachelor of Science
                 in Pharmacy. I worked as an Administrative Assistant in a local NGO under Save the Children. I
-                learned how to manage my time, organize stuff, be knowledgeable in using the computer, and interact
+                learned how to manage my time, stay organized, be knowledgeable in using the computer, and interact
                 with different kinds of people. I also had the privileged of working in one of the leading
                 drugstores in the country Southstar Drug. It is where I learned good customer service and compassion
                 for patients and customers.<br><br>I like to learn and discover new things and my past experiences help
